--- a/checkmate/checkmateclient/templates/start.html
+++ b/checkmate/checkmateclient/templates/start.html
@@ -3,7 +3,7 @@
 <form method='POST' action='/play/'>
     {{ form.as_p }}
     {% csrf_token %}
-    <input type='submit' name='operation' onClick="func();" value='Start'>
+    <input type='submit' name='operation' value='Start'>
 </form>
 </body>
 
